Desarrolla las semanas 4 a 17 de SO